--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "@babel/preset-env": "^7.0.0-beta.40",
     "@babel/preset-flow": "^7.0.0-beta.40",
     "@babel/preset-stage-2": "^7.0.0-beta.40",
+    "eslint": "^4.15.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-flowtype": "^2.41.0",
+    "eslint-plugin-import": "^2.8.0",
+    "babel-eslint": "^8.2.1",
     "flow-bin": "^0.66.0"
   }
 }
