--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,9 @@
 {
     "extends": ["plugin:flowtype/recommended", "airbnb-base"],
+    "parser": "babel-eslint",
+    "rules": {
+        "indent": ["error", 4, {"SwitchCase": 1}],    
+    },
     "plugins": [
         "flowtype"
     ],
