added optional-chaining babel plugin

--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,6 @@
       "@babel/preset-env",
       "@babel/preset-stage-2",
       "@babel/preset-flow"
-  ]
+  ],
+  "plugins": ["@babel/plugin-proposal-optional-chaining"]
 }
