fixed eslint in example

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@entur/sdk",
   "version": "0.0.1",
   "scripts": {
-    "lint": "eslint src/",
+    "lint": "eslint src/ example/",
     "flow": "flow",
     "transpile": "babel src --out-dir lib --copy-files"
   },
