--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,5 +22,6 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
+      - run: npm run transpile
       - run: npm run lint
       - run: npm run flow
