--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,11 @@
 {
     "extends": ["plugin:flowtype/recommended", "airbnb-base"],
     "parser": "babel-eslint",
+    "globals": {
+        "fetch": false
+    },
     "rules": {
+        "import/prefer-default-export": "off",
         "indent": ["error", 4, {"SwitchCase": 1}],
         "semi": ["error", "never"]
     },
