--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "clean-deep": "^3.0.2",
+    "geolib": "^2.0.24",
     "query-params": "0.0.1"
   },
   "devDependencies": {
