--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "clean-deep": "^3.0.2",
-    "query-params": "0.0.1"
+    "query-params": "0.0.1",
+    "turf": "^3.0.14"
   },
   "devDependencies": {
     "@babel/cli": "7.0.0-beta.44",
