--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "prepublishOnly": "npm run transpile"
   },
   "dependencies": {
+    "@turf/bbox": "^6.0.1",
+    "@turf/destination": "^6.0.1",
     "clean-deep": "^3.0.2",
     "query-params": "0.0.1",
-    "turf": "^3.0.14"
+    "turf-linestring": "^1.0.2",
+    "turf-point": "^2.0.1"
   },
   "devDependencies": {
     "@babel/cli": "7.0.0-beta.44",
