--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "bugs": {
     "url": "https://github.com/entur/sdk/issues"
   },
+  "browser": {
+    "./lib/fetch.js": "./lib/fetch.browser.js"
+  },
   "scripts": {
     "lint": "eslint src/ example/",
     "flow": "flow",
@@ -17,6 +20,7 @@
     "@turf/bbox": "^6.0.1",
     "@turf/destination": "^6.0.1",
     "clean-deep": "^3.0.2",
+    "node-fetch": "^2.2.0",
     "query-params": "0.0.1",
     "turf-linestring": "^1.0.2",
     "turf-point": "^2.0.1"
