Add dummy npm test script

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "lint": "eslint src/ example/",
+    "test": "echo 'There are no tests'",
     "flow": "flow",
     "transpile": "rm -rf lib && babel src --out-dir lib --copy-files",
     "prepublishOnly": "npm run transpile"
