Add support for multiple searches that are rate limited

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@turf/destination": "^6.0.1",
     "clean-deep": "^3.0.2",
     "node-fetch": "^2.2.0",
+    "promise-throttle": "^1.0.0",
     "query-params": "0.0.1",
     "turf-linestring": "^1.0.2",
     "turf-point": "^2.0.1"
