--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,11 @@
 {
   "presets": [
       "@babel/preset-env",
-      "@babel/preset-stage-2",
       "@babel/preset-flow"
   ],
-  "plugins": ["@babel/plugin-proposal-optional-chaining"],
+  "plugins": [
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-proposal-optional-chaining"
+  ],
   "ignore": ["src/libdef.flow.js"]
 }
