--- a/package.json
+++ b/package.json
@@ -22,24 +22,24 @@
     "@turf/bbox": "^6.0.1",
     "@turf/destination": "^6.0.1",
     "clean-deep": "^3.0.2",
-    "node-fetch": "^2.2.0",
+    "node-fetch": "^2.3.0",
     "promise-throttle": "^1.0.0",
-    "query-params": "0.0.1",
+    "qs": "^6.6.0",
     "turf-linestring": "^1.0.2",
     "turf-point": "^2.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "7.0.0-beta.44",
-    "@babel/core": "7.0.0-beta.44",
-    "@babel/plugin-proposal-optional-chaining": "7.0.0-beta.44",
-    "@babel/preset-env": "7.0.0-beta.44",
-    "@babel/preset-flow": "7.0.0-beta.44",
-    "@babel/preset-stage-2": "7.0.0-beta.44",
-    "babel-eslint": "^8.2.3",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-flowtype": "^2.49.3",
-    "eslint-plugin-import": "^2.12.0",
-    "flow-bin": "^0.74.0"
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-flow": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-flowtype": "^3.2.1",
+    "eslint-plugin-import": "^2.14.0",
+    "flow-bin": "^0.89.0"
   }
 }
