--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@entur/sdk",
-  "version": "0.10.3",
+  "version": "1.0.0-next.1",
   "license": "EUPL-1.2",
   "main": "./lib/index.js",
   "repository": "github:entur/sdk",
