Fix transpiling async/await functions
The @babel/polyfill must be imported, or it will fail with 'regeneratorRuntime is not defined'
Fixes #58

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prepublishOnly": "npm run ts && npm run transpile"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "@turf/bbox": "^6.0.1",
     "@turf/destination": "^6.0.1",
     "clean-deep": "^3.0.2",
