--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "typings": "./index.d.ts",
   "scripts": {
-    "lint": "eslint src/ example/",
+    "lint": "eslint src/",
     "test": "npm run ts && babel-node scripts/validate-queries.js",
     "ts": "tsc index.d.ts --noEmit",
     "flow": "flow",
