--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,6 @@ jobs:
             - ~/.npm
           key: v1-dependencies-{{ checksum "package-lock.json" }}
 
-      - run: npm run transpile
+      - run: npm run build
       - run: npm run lint
       - run: npm run flow
