--- a/package.json
+++ b/package.json
@@ -25,32 +25,31 @@
   "dependencies": {
     "@turf/bbox": "^6.0.1",
     "@turf/destination": "^6.0.1",
-    "clean-deep": "^3.1.0",
+    "clean-deep": "^3.2.0",
     "node-fetch": "^2.6.0",
     "promise-throttle": "^1.0.1",
-    "qs": "^6.9.0",
+    "qs": "^6.9.1",
     "turf-linestring": "^1.0.2",
     "turf-point": "^2.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
     "@babel/node": "^7.8.3",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-flow": "^7.0.0",
-    "@babel/register": "^7.6.2",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-flow": "^7.8.3",
+    "@babel/register": "^7.8.3",
     "babel-eslint": "^10.0.3",
-    "docz": "^2.0.0-rc.23",
+    "docz": "^2.2.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-flowtype": "^3.13.0",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-import": "^2.20.0",
     "flow-bin": "^0.89.0",
     "gatsby-theme-docz": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.5"
   }
 }
