--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "npm run lint && npm run check-libdefs && ts-node scripts/validate-queries.js",
     "check-libdefs": "flow && tsc index.d.ts --noEmit",
     "prebuild": "npm test && rm -rf lib",
-    "build": "babel --extensions .ts src --out-dir lib --copy-files",
+    "build": "babel --extensions .ts src --out-dir lib && cp libdef.flow.js lib/",
     "prepublishOnly": "npm run build",
     "docs": "docz dev",
     "build:docs": "docz build"
