--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "./lib/fetch.js": "./lib/fetch.browser.js"
   },
   "typings": "./index.d.ts",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "lint": "eslint src/ --ext=js,ts",
     "test": "npm run lint && npm run check-libdefs && ts-node scripts/validate-queries.js",
