--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   },
   "typings": "./index.d.ts",
   "files": [
-    "lib"
+    "lib",
+    "index.d.ts",
+    "libdef.flow.js"
   ],
   "scripts": {
     "lint": "eslint src/ --ext=js,ts",
     "test": "npm run lint && npm run check-libdefs && ts-node scripts/validate-queries.js",
     "check-libdefs": "flow && tsc index.d.ts --noEmit",
     "prebuild": "npm test && rm -rf lib",
-    "build": "babel --extensions .ts src --out-dir lib && cp libdef.flow.js lib/",
+    "build": "babel --extensions .ts src --out-dir lib",
     "prepublishOnly": "npm run build",
     "docs": "docz dev",
     "build:docs": "docz build"
