--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prepublishOnly": "npm run build",
     "docs": "docz dev",
     "build:docs": "docz build",
+    "deploy:docs": "npm run build:docs && firebase deploy",
     "fetch-schemas": "ts-node scripts/fetch-schemas.ts"
   },
   "dependencies": {
