--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-flowtype": "^3.13.0",
     "eslint-plugin-import": "^2.20.0",
+    "firebase-tools": "^7.12.1",
     "flow-bin": "^0.89.0",
     "gatsby-theme-docz": "^2.2.0",
     "react": "^16.12.0",
