--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@turf/bbox": "^6.0.1",
     "@turf/destination": "^6.0.1",
     "@turf/helpers": "^6.1.4",
+    "agentkeepalive": "^4.1.0",
     "clean-deep": "^3.2.0",
     "node-fetch": "^2.6.0",
     "promise-throttle": "^1.0.1",
