--- a/package.json
+++ b/package.json
@@ -56,9 +56,11 @@
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-flowtype": "^3.13.0",
     "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "firebase-tools": "^7.12.1",
     "flow-bin": "^0.89.0",
     "gatsby-theme-docz": "^2.2.0",
+    "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "ts-node": "^8.6.2",
