--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "scripts": {
     "lint": "eslint src/ --ext=js,ts",
-    "test": "npm run lint && npm run check-libdefs && ts-node scripts/validate-queries.js",
+    "test": "npm run lint && npm run check-libdefs && ts-node scripts/validate-queries.js && tsc --noEmit -p .",
     "check-libdefs": "flow && tsc index.d.ts --noEmit",
     "prebuild": "npm test && rm -rf lib",
     "build": "babel --extensions .ts src --out-dir lib",
