Auto-generate declaration files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
       "target": "esnext",
       "moduleResolution": "node",
       "allowJs": true,
-      "noEmit": true,
+      "emitDeclarationOnly": true,
+      "declarationDir": "lib",
+      "declaration": true,
       "strict": true,
       "isolatedModules": true,
       "esModuleInterop": true,
