--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "browser": {
     "./lib/fetch.js": "./lib/fetch.browser.js"
   },
-  "typings": "./index.d.ts",
+  "typings": "./lib/index.d.ts",
   "files": [
     "lib",
     "index.d.ts",
@@ -18,8 +18,7 @@
   ],
   "scripts": {
     "lint": "eslint src/ scripts/ --ext=js,ts",
-    "test": "npm run lint && npm run check-libdefs && ts-node scripts/validate-queries.js && tsc --noEmit -p .",
-    "check-libdefs": "tsc index.d.ts --noEmit",
+    "test": "npm run lint && ts-node scripts/validate-queries.js && tsc --noEmit --emitDeclarationOnly false -p .",
     "prebuild": "npm test && rm -rf lib",
     "build": "babel --extensions .ts src --out-dir lib",
     "prepublishOnly": "npm run build",
