Add declaration build script

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lint": "eslint src/ scripts/ --ext=js,ts",
     "test": "npm run lint && ts-node scripts/validate-queries.js && tsc --noEmit --emitDeclarationOnly false -p .",
     "prebuild": "npm test && rm -rf lib",
-    "build": "babel --extensions .ts src --out-dir lib",
+    "declaration": "tsc",
+    "build": "babel --extensions .ts src --out-dir lib && npm run declaration",
     "prepublishOnly": "npm run build",
     "docs": "docz dev",
     "build:docs": "docz build",
