--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-flowtype": "^4.7.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.2.0",
+    "eslint-plugin-tsdoc": "^0.2.14",
     "firebase-tools": "^8.17.0",
     "gatsby-theme-docz": "^2.3.1",
     "prettier": "^2.2.1",
