--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@entur/sdk",
-    "version": "3.7.0-rc.1",
+    "version": "3.7.0",
     "license": "EUPL-1.2",
     "main": "./lib/index.js",
     "bugs": {
