Replace Docz with TypeDoc
TypeDoc generates an API Reference website from the TypeScript
types and TSDoc comments. This has its advantages:

* Less manual work – the doc is generated from the actual code
* More correct documentation – since it's generated from code
* Better typeahead in editors – TSDoc can be interpreted by IDEs

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
     "hosting": {
-        "public": ".docz/dist",
+        "public": "docs",
         "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
     }
 }
