--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
         "declaration": "tsc",
         "build": "babel --extensions .ts src --out-dir lib && npm run declaration",
         "prepublishOnly": "npm run build",
-        "docs": "docz dev",
-        "build:docs": "docz build",
-        "deploy:docs": "npm run build:docs && firebase deploy",
+        "docs": "npm run build:docs -- --watch",
+        "build:docs": "typedoc --out docs src/index.ts --tsconfig ./tsconfig.typedoc.json --readme ./DOC_INDEX.md",
+        "deploy:docs": "npm run build:docs && firebase hosting:channel:deploy typedoc --expires 30d",
         "generate-types": "./scripts/generate-types.sh",
         "fetch-schemas": "ts-node scripts/fetch-schemas.ts"
     },
@@ -58,18 +58,15 @@
         "@typescript-eslint/eslint-plugin": "^5.9.1",
         "@typescript-eslint/parser": "^5.9.1",
         "babel-eslint": "^10.1.0",
-        "docz": "^2.3.1",
         "eslint": "^8.6.0",
         "eslint-plugin-import": "^2.23.2",
         "eslint-plugin-tsdoc": "^0.2.14",
         "firebase-tools": "^9.14.0",
-        "gatsby-theme-docz": "^2.3.1",
         "graphql": "^15.8.0",
-        "prettier": "^2.5.1",
-        "react": "^16.14.0",
-        "react-dom": "^16.14.0",
+        "prettier": "2.5.1",
         "swagger-typescript-api": "^9.1.2",
         "ts-node": "^10.0.0",
-        "typescript": "^4.3.5"
+        "typedoc": "^0.22.3",
+        "typescript": "^4.4.3"
     }
 }
