--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,6 @@
 {
-  "hosting": {
-    "public": ".docz/dist",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
-  }
+    "hosting": {
+        "public": ".docz/dist",
+        "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+    }
 }
