Update Prettier and use exact versioning
Minor updates to Prettier can cause many formatting changes,
therefore it's recommended to use exact versioning for it.

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
         "eslint-plugin-tsdoc": "^0.2.14",
         "firebase-tools": "^9.14.0",
         "gatsby-theme-docz": "^2.3.1",
-        "prettier": "^2.3.0",
+        "prettier": "2.3.2",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
         "swagger-typescript-api": "^9.1.2",
