--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
         "@babel/preset-env": "^7.14.7",
         "@babel/preset-typescript": "^7.13.0",
         "@babel/register": "^7.13.16",
+        "@graphql-codegen/cli": "^2.3.1",
+        "@graphql-codegen/typescript": "^2.4.2",
         "@types/qs": "^6.9.6",
         "@typescript-eslint/eslint-plugin": "^4.28.1",
         "@typescript-eslint/parser": "^4.28.1",
