--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "eslint-plugin-tsdoc": "^0.2.14",
         "firebase-tools": "^9.14.0",
         "gatsby-theme-docz": "^2.3.1",
+        "graphql": "^15.8.0",
         "prettier": "2.3.2",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
