--- a/package.json
+++ b/package.json
@@ -55,18 +55,18 @@
         "@graphql-codegen/cli": "^2.3.1",
         "@graphql-codegen/typescript": "^2.4.2",
         "@types/qs": "^6.9.6",
-        "@typescript-eslint/eslint-plugin": "^4.28.1",
-        "@typescript-eslint/parser": "^4.28.1",
+        "@typescript-eslint/eslint-plugin": "^5.9.1",
+        "@typescript-eslint/parser": "^5.9.1",
         "babel-eslint": "^10.1.0",
         "docz": "^2.3.1",
-        "eslint": "^7.29.0",
+        "eslint": "^8.6.0",
         "eslint-plugin-import": "^2.23.2",
-        "eslint-plugin-prettier": "^3.4.0",
+        "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-tsdoc": "^0.2.14",
         "firebase-tools": "^9.14.0",
         "gatsby-theme-docz": "^2.3.1",
         "graphql": "^15.8.0",
-        "prettier": "2.3.2",
+        "prettier": "^2.5.1",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
         "swagger-typescript-api": "^9.1.2",
