--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
         "eslint-plugin-tsdoc": "^0.2.14",
         "firebase-tools": "^10.2.1",
         "graphql": "^16.3.0",
-        "prettier": "2.5.1",
+        "prettier": "^2.6.0",
         "swagger-typescript-api": "^9.1.2",
         "ts-node": "^10.0.0",
         "typedoc": "^0.22.3",
